# onml

./: .gitignore  CMakeLists.txt  clang-format.sh
include/: file_reader.h  linear_classifier.h  linear_regressor.h  loss.h  optimizer.h
src/: file_reader.cpp  linear_classifier.cpp  linear_regressor.cpp  loss.cpp  optimizer.cpp
test/: boston_X.data  test_linear_classifier.cpp  test_linear_regressor.cpp
